Make the scanners clasify the type of the URL they find Added tests for File and WebDAV scan
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@43718 13f79535-47bb-0310-9956-ffa450edef68